fix: Javassist RowMapper 适配 JDK 17+ 模块系统（MethodHandles 路径，免 --add-opens）；CodeEnum 枚举加 @JsonValue 使 REST 契约统一业务码